<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:text="@string/fragment_home_tv_title"
            android:textColor="@color/black"
            android:textSize="20dp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvShowCar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15"
            android:background="@drawable/button"
            android:padding="15dp"
            android:text="@string/fragment_home_show_car"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvShowElectricBike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:padding="15dp"
            android:text="@string/fragment_home_show_electric_bike"
            android:textColor="@color/white"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/tvShowMotorbike"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:padding="15dp"
            android:text="@string/fragment_home_show_motorbike"
            android:textColor="@color/white"
            android:textSize="20dp" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>