<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".addProduct.AddProductFragment">


    <include
        android:id="@+id/layout_header"
        layout="@layout/layout_header"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50" />


    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/btnSave"
        app:layout_constraintTop_toBottomOf="@id/layout_header">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rvImages"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10"
                android:clipToPadding="false"
                android:overScrollMode="never"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvNameProduct"
                style="@style/text_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_40"
                android:paddingTop="@dimen/_10"
                android:paddingBottom="@dimen/_10"
                android:text="@string/title_name_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/rvImages" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtNameProduct"
                style="@style/edt_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16"
                android:layout_marginEnd="@dimen/_16"
                android:background="@drawable/bg_edt"
                android:hint="@string/type_name_product"
                android:inputType="textNoSuggestions"
                android:padding="@dimen/_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvNameProduct" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDesProduct"
                style="@style/text_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_5"
                android:paddingBottom="@dimen/_10"
                android:text="@string/title_des_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtNameProduct" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtDesProduct"
                style="@style/edt_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16"
                android:layout_marginEnd="@dimen/_16"
                android:background="@drawable/bg_edt"
                android:hint="@string/content_des_product"
                android:padding="@dimen/_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDesProduct" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPriceProduct"
                style="@style/text_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_5"
                android:paddingBottom="@dimen/_10"
                android:text="@string/title_price_product"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtDesProduct" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtPriceProduct"
                style="@style/edt_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16"
                android:layout_marginEnd="@dimen/_16"
                android:background="@drawable/bg_edt"
                android:hint="@string/contetn_price_product"
                android:inputType="number"
                android:padding="@dimen/_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPriceProduct" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvContact"
                style="@style/text_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="@dimen/_5"
                android:paddingBottom="@dimen/_16"
                android:text="@string/title_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/edtPriceProduct" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/edtContactPhone"
                style="@style/edt_add"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_16"
                android:layout_marginEnd="@dimen/_16"
                android:background="@drawable/bg_edt"
                android:hint="@string/title_your_phone"
                android:inputType="number"
                android:padding="@dimen/_10"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvContact" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/llType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    style="@style/text_add"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tile_type" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tvType"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_10"
                    android:gravity="center"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </androidx.appcompat.widget.LinearLayoutCompat>


            <RadioGroup
                android:id="@+id/btnRadioGroup"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_15"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/llType">


                <RadioButton
                    android:id="@+id/btnShowCar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/fragment_home_show_car" />

                <RadioButton
                    android:id="@+id/btnShowMotorbike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_show_motorbike" />

                <RadioButton
                    android:id="@+id/btnShowElectricBike"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fragment_home_show_electric_bike" />


            </RadioGroup>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnSave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45"
        android:layout_marginLeft="@dimen/_16"
        android:layout_marginTop="@dimen/_16"
        android:layout_marginRight="@dimen/_16"
        android:layout_marginBottom="@dimen/_15"
        android:background="@drawable/bg_btn"
        android:text="@string/save_product"
        android:textAllCaps="true"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_size_16"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nested" />

</androidx.constraintlayout.widget.ConstraintLayout>