<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

    </data>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvMakePhoneCall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/button"
            android:padding="15dp"
            android:text="@string/fragment_edit_user_phone_call"
            android:textColor="@color/white"
            android:textSize="20dp" />

        <TextView
            android:id="@+id/tvSendMessageToZalo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:padding="15dp"
            android:text="@string/fragment_edit_user_phone_call_by_zalo"
            android:textColor="@color/white"
            android:textSize="20dp" />


        <TextView
            android:id="@+id/tvSendMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/button"
            android:padding="15dp"
            android:text="@string/fragment_edit_user_send_message_to_app"
            android:textColor="@color/white"
            android:textSize="20dp" />


    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>