<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_100"
        android:text="@string/txt_login"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_size_30"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_input_layout"
        android:layout_marginTop="@dimen/_20"
        android:hint="@string/txt_email"
        app:layout_constraintTop_toBottomOf="@id/tvLogin">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textCursorDrawable="@null"
            android:inputType="textEmailAddress">

        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layoutPass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txt_pass"
        app:endIconMode="custom"
        app:endIconDrawable="@drawable/ic_baseline_remove_red_eye_24"
        style="@style/text_input_layout"
        app:layout_constraintTop_toBottomOf="@id/layoutEmail">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/text"
            android:textCursorDrawable="@null"
            android:inputType="textPassword"></com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45"
        android:layout_marginLeft="@dimen/_16"
        android:layout_marginTop="@dimen/_30"
        android:layout_marginRight="@dimen/_16"
        android:background="@drawable/bg_btn"
        android:text="@string/txt_login"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_size_16"
        app:layout_constraintTop_toBottomOf="@id/layoutPass" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50"
        android:layout_marginLeft="@dimen/_16"
        android:layout_marginTop="@dimen/_16"
        android:layout_marginRight="@dimen/_16"
        android:text="@string/txt_not_register_yet"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="@dimen/txt_size_16"
        android:textStyle="italic"
        app:layout_constraintTop_toBottomOf="@id/btnLogin" />

</androidx.constraintlayout.widget.ConstraintLayout>