<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".login.LoginFragment">

    <androidx.core.widget.NestedScrollView
        android:id="@+id/nested"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_0"
        app:layout_constraintBottom_toTopOf="@id/btnRegister"
        app:layout_constraintTop_toTopOf="parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imgBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_grey"
                android:padding="@dimen/_16"
                android:clickable="true"
                android:background="?attr/selectableItemBackground"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/txt_register"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_30"
                android:layout_marginTop="@dimen/_50"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_name"
                style="@style/text_input_layout"
                android:layout_marginTop="@dimen/_20"
                app:layout_constraintTop_toBottomOf="@id/tvLogin">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="text"
                    android:textColor="@color/text"
                    android:textCursorDrawable="@null"
                    android:textColorHint="@color/_FF6B6B6D"
                    android:textSize="@dimen/txt_size_15">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutSdt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_phone"
                style="@style/text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/layoutName">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtSdt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="phone"
                    android:textColor="@color/text"
                    android:textCursorDrawable="@null"
                    android:textColorHint="@color/_FF6B6B6D"
                    android:textSize="@dimen/txt_size_15">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_email"
                style="@style/text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/layoutSdt">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/text"
                    android:textCursorDrawable="@null"
                    android:textColorHint="@color/_FF6B6B6D"
                    android:textSize="@dimen/txt_size_15">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_address"
                style="@style/text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/layoutEmail">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="text"
                    android:textColor="@color/text"
                    android:textCursorDrawable="@null"
                    android:textColorHint="@color/_FF6B6B6D"
                    android:textSize="@dimen/txt_size_15">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_pass"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_remove_red_eye_24"
                style="@style/text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/layoutAddress">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:textColor="@color/text"
                    android:textCursorDrawable="@null"
                    android:textColorHint="@color/_FF6B6B6D"
                    android:textSize="@dimen/txt_size_15">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutConfirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/txt_confirm_pass"
                app:endIconMode="custom"
                app:endIconDrawable="@drawable/ic_baseline_remove_red_eye_24"
                style="@style/text_input_layout"
                app:layout_constraintTop_toBottomOf="@id/layoutPass">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edtConfirmPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:inputType="textPassword"
                    android:textColor="@color/text"
                    android:textCursorDrawable="@null"
                    android:textColorHint="@color/_FF6B6B6D"
                    android:textSize="@dimen/txt_size_15">

                </com.google.android.material.textfield.TextInputEditText>

            </com.google.android.material.textfield.TextInputLayout>


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/_16"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/layoutConfirm">

                <RadioButton
                    android:id="@+id/radioSaler"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/txt_saler"/>

                <RadioButton
                    android:id="@+id/radioBuyer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_16"
                    android:text="@string/txt_buyer" />
            </RadioGroup>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_45"
        android:layout_margin="@dimen/_16"
        android:background="@drawable/bg_btn"
        android:text="@string/txt_register"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="@dimen/txt_size_16"
        app:layout_constraintTop_toBottomOf="@id/nested"
        app:layout_constraintBottom_toBottomOf="parent"/>



</androidx.constraintlayout.widget.ConstraintLayout>